--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,41 +4,31 @@ server.port=8090
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
-#mybatis ì´ì©ì¤ì 1 (datasourceìì±ì ë³´ì ê³µ)
+#mybatis Local
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/connectdb
+#spring.datasource.username=emp2
+#spring.datasource.password=emp2
+
+
+#mybatis deploy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/connectdb
-spring.datasource.username=emp2
-spring.datasource.password=emp2
-
-
-##naver 서버 사용시
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://49.50.167.86:3306/naverdb
-
-#mybatis DB ( LJY )
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://101.101.208.234:3306/naverdb
-
-#spring.datasource.username=naveruser
-#spring.datasource.password=Naveruser_1234
+spring.datasource.url=jdbc:mysql://43.201.30.70/:3306/billy
+spring.datasource.username=backcoder
+spring.datasource.password=1111
 
 
 
-#mysqlì´ì©ì¤ì 2 sqlSessionìì±ì ë³´ì ê³µ
 
+#mysql
 
-
-#mysql이용설정2 sqlSession생성정보제공
-
-mybatis.config-location=classpath:mybatis/mybatis-config.xml
-
-#mysqlì´ì©ì¤ì 3 
+mybatis.config-location=classpath:mybatis/mybatis-config.xml 
 mybatis.mapper-locations=classpath:mybatis/mapper/*-mapping.xml
 
 
-
-spring.servlet.multipart.max-file-size=150MB
-spring.servlet.multipart.max-request-size=180MB
+#file Size
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 
 spring.mail.host=smtp.gmail.com
