--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.mvc.view.suffix=.jsp
 
 #mybatis deploy
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://43.201.30.70/:3306/billy
+spring.datasource.url=jdbc:mysql://3.35.49.203:3306/billydb
 spring.datasource.username=backcoder
 spring.datasource.password=1111
 
